terraform-fargate/cluster/k8s/template/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "nginx-deployment"
  namespace: "webapps-dev"
spec:
  selector:
    matchLabels:
      app: "nginx"
  replicas: 2
  template:
    metadata:
      labels:
        app: "nginx"
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: Always
        name: "nginx"
        ports:
        - containerPort: 80
