terraform-fargate/cluster/k8s/template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "nginx-service"
  namespace: "webapps-dev"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "nginx"
