terraform-fargate/cluster/k8s/template/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "nginx-ingress"
  namespace: "webapps-dev"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: nginx-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "nginx-service"
              servicePort: 80
